# uConnect

./: .cleanup.yaml  .env.example  .gitignore  .udos-family-python.example  ARCHITECTURE_README.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM_SETUP_COMPLETE.md  FINAL_INTEGRATION_REPORT.md  FIXES_DOCUMENTATION.md  FRAMEWORK_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.txt  LICENSE  MIGRATION_COMPLETE.md  Makefile  Makefile.dev  ORGANIZATION_STRUCTURE.md  PROJECT_STATUS_REPORT.md  README.md  ROADMAP_UI_UX.md  SETUP_SUMMARY.md  SPRINT_PLAN.md  STEP_2_SUMMARY.md  STORYTELLER_SUMMARY.md  STRUCTURE_SUMMARY.md  UCODE1_UCODE2_BOUNDARIES.md  clean-compost.sh  demo_react_renderer.sh  dev_mode_config.json  ecosystem_framework_setup.sh  eslint.config.js  go.md  implement_go.sh  package-lock.json  package.json  (+21 more)
Connect/core-rs/: Cargo.toml
Modules/UdosLocalLlm/: README.md  pyproject.toml
OkAgentDigital/CeeFaxThinUi/: Cargo.toml  README.md
OkAgentDigital/RusTui/: Cargo.toml
SonicExpress/storyteller/: Cargo.toml
ThinUI/: ARCHITECTURE.md  Cargo.toml  DEMO_SUMMARY.md  DOCUMENTATION.md  INTEGRATION_GUIDE.md  PLUGIN_THEME_GUIDE.md  PROGRESS_SUMMARY.md  REACT_MIGRATION_SUMMARY.md  README.md  RETRO_ANALYSIS.md  RETRO_SPEC.md  launch.sh  package-lock.json  package.json  plugin-demo.md  run-thinui.sh  test.html  vite.config.js  vite.config.ts
ThinUI/examples/: blitz_demo.html  live_control_panel.html  simple.html
ThinUI/scripts/: start-dev.cjs  stop-dev.cjs
ThinUI/src/: backends.rs  lib.rs  renderers.rs  state.rs
ThinUI/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ThinUI/ui/: index.html  main.js  styles.css
core/mcp-gateway/: Cargo.toml  README.md
mcp-gateway/: Cargo.toml  README.md
mcp-gateway/src/: hivemind_client.rs  main.rs  python_host.rs  re3_client.rs  router.rs  vault.rs  xcode_host.rs
pty-server/: Cargo.toml  README.md  test_client.html
pty-server/src/: main.rs  session.rs
retro-core/: Cargo.toml  GETTING_STARTED.md  README.md  clean_retro_demo.html  final_demo.html  large_retro_demo.html  perfect_demo.html  simple_test.html  test.html  working_demo.html
retro-core/src/: color.rs  fonts.rs  grid.rs  lib.rs  renderer.rs  systems.rs
uCode1/: .dev.yaml  Cargo.toml  DEPLOYMENT_CHECKLIST.md  MCP_VAULT_INTEGRATION.md  Makefile  README.md  SPRINT_TODO.md  binder_cli.py  build.rs  cell_cli.py  demo-pack.cube.json  feed_cli.py  grid_cli.py  liquid_cli.py  manifest.yaml  mdx_cli.py  my-cube.cube.json  plugin_cli.py  pyproject.toml  relic_cli.py  requirements.txt  setup.py  snack_cli.py  test_grid_core.py  test_mcp_client.py  test_mcp_integration.py  test_snack_system.py  test_text_tools.py  thinui_cli.py  ucode  ucode_cli.py  usxd_cli.py  vault_cli.py
uCode1/.binders/: CITY-INDEX-001.binder.json  TEST-BINDER-001.binder.json
uCode1/.cargo/: config.toml
uCode1/.githooks/: pre-commit
uCode1/.relics/: GREET-001.relic  TEST-RELIC-001.relic
uCode1/.snacks/: TEST-001.yaml
uCode1/.usxd/: TEST-USXD-001.usxd.json  pipeline-test-e2e.usxd.json  test-doc.usxd.json  test-registry-e2e.usxd.json  test_doc.usxd.json
uCode1/core/: Cargo.toml
uCode1/core_py/: __init__.py  mcp_client.py  seed.py
uCode1/docs/: CHARACTER_SET_REFERENCE.md  CLI_COMMANDS.md  CLI_README.md  C_LAYER_CHEAT_SHEET.md  GITHUB_NEXT_INTEGRATION.md  MARKDOWN_STANDARDS.md  QUICK_START.md  README.md  SPATIAL_CHARACTER_INTEGRATION.md  SPATIAL_CHARACTER_MAPPING.md  SPRITE_OBJECT_REFERENCE.md  USYSTEM_CHANGES.md  USYSTEM_ENHANCED.md  USYSTEM_FINAL_SUMMARY.md  USYSTEM_IMPLEMENTATION.md  VAULT_DOCS_TEMPLATE.md  usystem_schema.sql
uCode1/examples/: hello.bas  lens_skin_mcp_demo.bas  mcp_integration.py
uCode1/feed-spool/: Cargo.toml
uCode1/grid-core/: Cargo.toml
uCode1/mcp/: Cargo.toml
uCode1/narrator/: __init__.py  character.py  cli.py  lexicon.py  narrator.py
uCode1/ok-agent/: Cargo.toml
uCode1/ok_agent/: __init__.py  c64_console.py  cli.py  knowledge.py  models.py  orchestrate.py  personality.py  skills.py
uCode1/scripts/: ci_check_imports.py  ci_validate_snackpacks.py  ci_validate_snacks.py  generate_docs.sh  sync_vault_docs.sh
uCode1/spatial/: Cargo.toml
uCode1/src/: main.rs  modes.rs
uCode1/tests/: test_cell.py  test_character.py  test_feed.py  test_lens_skin_mcp.py  test_liquid.py  test_mdx.py  test_narrator_lexicon.py  test_snack_container.py  test_snack_relic.py  test_thinui_integration.py  test_usxd_pipeline.py
uCode1/themes/: config.yaml  display.css  grid-test.html  tailwind.css  udos-widgets.js
uCode1/tui/: Cargo.toml
uCode1/ucode1/: __init__.py  cli.py  main.py  snack_cli.py
uCode1/udos/: __init__.py  mcp_server.py
uCode1/udos-cli/: Cargo.toml  README.md  udo  udos
uCode1/usystem/: Cargo.toml
uCode1/vault-bridge/: Cargo.toml
uCode2/: Cargo.toml
uCode2/ThinUI/: index.html  package-lock.json  package.json  vite.config.js
uCode2/core/: Cargo.toml
uCode2/feed-spool/: Cargo.toml
uCode2/grid-core/: Cargo.toml
uCode2/mcp/: Cargo.toml
uCode2/ok-agent/: Cargo.toml
uCode2/ok-seeker/: Cargo.toml
uCode2/spatial/: Cargo.toml
uCode2/tui/: Cargo.toml
uCode2/ucode1-cli/: Cargo.toml  main.rs
uCode2/usystem/: Cargo.toml
uCode2/vault-bridge/: Cargo.toml  SQLITE_IMPLEMENTATION.md
uCode3/: .gitignore  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  TASKS.md  go.work  requirements.txt  uHomeNest.code-workspace
uCode3/.dev/: README.md
uCode3/apps/: README.md
uCode3/config/: README.md  ci-config.example.yml
uCode3/contracts/: README.md  udos_automation_job.json
uCode3/courses/: README.md
uCode3/dev/: COMPOST-LEGACY.md  README.md  ROADMAP-ROUNDS.md  TASK_FORGE.md  UNIVERSAL-DEV.md  WORKFLOW.md
uCode3/docs/: AGENT-SHARING-INSTRUCTIONS.md  APPS-COMMIT-SUMMARY.md  CI-CD-SETUP-GUIDE.md  CODE-REPO-SETUP.md  COMMIT-SUMMARY-20260423.md  COMPLETE-ECOSYSTEM-DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT-ROADMAP-2024.md  DEVLOG.md  ECOSYSTEM-COMMIT-AND-PUSH-SUMMARY.md  ECOSYSTEM-FINAL-REVIEW.md  ECOSYSTEM-RULES.md  EXAMPLES_GUIDE.md  (+25 more)
(+5234 files in other folders)
