[package]
name = "thinui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[dependencies.web-sys]
version = "0.3.95"
features = ["Window", "HtmlCanvasElement", "CanvasRenderingContext2d"]

[profile.release]
opt-level = "s"
lto = true


