[package]
name = "thinui"
version = "0.1.0"
edition = "2024"
authors = ["uDos Team <team@udos.io>"]
description = "Lightweight GUI renderer for uDos core"
license = "MIT"
repository = "https://github.com/OkAgentDigital/ThinUI"

[lib]
name = "thinui"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full", "net"] }
tauri = { version = "2.0" }
chrono = "0.4"
thiserror = "1.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]