[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"
authors = ["uDos Team"]
description = "uDos MCP Gateway - Unified access to all uDos tools and engines"
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# JSON/Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for forwarding to other engines
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"
# Time
chrono = "0.4"
# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
