[package]
name = "pty-server"
version = "0.1.0"
edition = "2021"
authors = ["uDos Team"]
description = "WebSocket PTY Server for Micro Terminal Integration"
license = "MIT"

[dependencies]
# WebSocket support
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# HTTP server
warp = "0.3"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Environment variables
dotenv = "0.15"

# UUID for session IDs
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1