[workspace]
members = [
    "core",
    "ok-agent", 
    "spatial",
    "vault-bridge",
    "usystem",
    "grid-core"
]

[package]
name = "uCode1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-http"
path = "src/bin/mcp-http.rs"

[features]
default = []
mdx = ["dep:pulldown-cmark"]
mdo = ["dep:serde_yaml"]
code-atlas = []
eea = []

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ucode1-vault-bridge = { path = "vault-bridge" }
ucode1-ok-agent = { path = "ok-agent" }
ucode1-mcp = { path = "mcp" }
rustui = { path = "../OkAgentDigital/RusTui" }
ucode1-spatial = { path = "spatial" }
ucode1-feed-spool = { path = "feed-spool" }
ucode1-usystem = { path = "usystem" }

shellexpand = "3.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
axum = "0.7"
hyper = { version = "0.14", features = ["server"] }
geo = "0.27"
serde_json = "1.0"
pulldown-cmark = { version = "0.9", optional = true }
serde_yaml = { version = "0.9", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
tempfile = "3.8"
