[package]
name = "ucode3-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
base64 = "0.22"
byteorder = "1.5"

[lib]
name = "ucode3_core"
path = "core/src/lib.rs"

[[test]]
name = "ucode3_core_tests"
path = "tests/lib.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1