[package]
name = "udos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Terminal rendering (BubbleTea-inspired, Rust-native)
ratatui = "0.28"
crossterm = "0.28"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# File system
fs_extra = "1.3"
walkdir = "2.5"
# Git
git2 = "0.19"
# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }
# HTTP
reqwest = { version = "0.12", features = ["json"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
env_logger = "0.11"
log = "0.4"
# Path handling
dunce = "1.0"
# Glob
glob = "0.3"
# UUID generation
uuid = { version = "1.8", features = ["v4", "serde"] }
# LRU cache
lru = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
