[package]
name = "rustui"
version = "0.1.0"
edition = "2024"

[dependencies]
ucode2-vault-bridge = { path = "../../uCode2/vault-bridge" }
ucode2-ok-agent = { path = "../../uCode2/ok-agent" }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Async support
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3.10"