[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
walkdir = "2"
