[package]
name = "ucode1-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
ucode1-core = { path = "../core" }
ucode1-vault-bridge = { path = "../vault-bridge" }
ucode1-ok-agent = { path = "../ok-agent" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Unix domain sockets
interprocess = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Utilities
base64 = "0.21"
tempfile = "3.8"
chrono = "0.4"

[features]
default = []