[package]
name = "ucode1-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ucode1-core = { path = "../core" }
ucode1-vault-bridge = { path = "../vault-bridge" }
ucode1-ok-agent = { path = "../ok-agent" }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Async support
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3.10"