[package]
name = "udos"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
which = "6.0"
portpicker = "0.1"
shellexpand = "3.1"
chrono = "0.4"
ratatui = "0.26"
crossterm = "0.27"
grid-core = { path = "../grid-core" }
ucode1-core = { path = "../core" }
flate2 = "1.0"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true