[package]
name = "ucode1-vault-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
ucode1-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "basic_usage"