[package]
name = "ucode2-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
# Workspace members
ucode2-core = { path = "../core" }
ucode2-vault-bridge = { path = "../vault-bridge" }
ucode2-ok-agent = { path = "../ok-agent" }
ucode2-grid-core = { path = "../grid-core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Direct dependencies
serde_yaml = "0.9"
rmp-serde = "1.1"
interprocess = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
tempfile = "3.8"
chrono = "0.4"

[features]
default = []

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Unix domain sockets
interprocess = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Utilities
base64 = "0.21"
tempfile = "3.8"
chrono = "0.4"

[features]
default = []