[package]
name = "ucode2-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for uCode2 with vault integration"

[dependencies]
ucode2-vault-bridge = { path = "../vault-bridge" }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Async support
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"