[package]
name = "ucode2-vault-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
ucode2-core = { path = "../core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "basic_usage"