[package]
name = "homeassistant"
version = "0.1.0"
edition = "2021"
description = "Home Assistant bridge for uCode3 — REST API client, Matter protocol connector, kiosk/embed support"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "ha-bridge"
path = "src/main.rs"
