[package]
name = "rust-space"
version = "0.1.0"
edition = "2021"
description = "RustSpace — 3D spatial computing environment for uDos (placeholder)"

[dependencies]
# GUI
egui = "0.27"
eframe = { version = "0.27", features = ["default"] }

# HTTP + Serialization
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
