[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uhome-server"
version = "0.2.0"
description = "uHomeNest — uHOME server Python package (uhome-server CLI)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "markdown>=3.5,<4",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
]

[project.scripts]
uhome = "uhome_server.cli:main"
uhome-launcher = "uhome_server.cli:launcher_main"
uhome-installer = "uhome_server.cli:installer_main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uhome_server = ["contracts/*.json", "static/thin/*.css"]
