[package]
name = "spaceshipper"
version = "0.0.1"
edition = "2021"
description = "SpaceShipper — 3D spatial UI / immersive control room (scaffold only)"

[dependencies]
# 3D / Game engine
bevy = "0.13"

# Immediate mode GUI
egui = "0.27"
egui_bevy = "0.27"

# HTTP + Serialization
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
