[package]
name = "thinui-tauri"
version = "0.1.0"
description = "ThinUI Tauri App Shell — uCode2 surfaces"
authors = ["uDos Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
